base/src/test/resources/failure/patterns/issues2/issue597.aya.txt
In file $FILE:2:22 ->

  1 | open data Nat | O | S Nat
  2 | def bad Nat : Nat | S S O => O | _ => O
                            ^^

Error: Cannot push this parameter:
         (_ : Nat)
       to the match result, as this pattern is a sub-pattern of:
         S

In file $FILE:2:24 ->

  1 | open data Nat | O | S Nat
  2 | def bad Nat : Nat | S S O => O | _ => O
                              ^^

Error: There is no parameter for the pattern
         O
       to match against, given the return type
         Nat
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

2 error(s), 0 warning(s).
What are you doing?
